--- a/flask-app/templates/data_wrapper.html
+++ b/flask-app/templates/data_wrapper.html
@@ -1,19 +1,24 @@
 {% extends "wrapper.html" %} 
 
 {% block content %}
-<div class="container">
+<div class="container" align="center">
   <div class="row my-2">
-    <div class="col d-flex justify-content-center">
+    <div class="col">
       {% block image %}{% endblock %}
     </div>
   </div>
   <div class="row my-3">
-    <div class="col d-flex justify-content-center">
-      {% block title %}{% endblock %}
+    <div class="col">
+      {% block heading %}{% endblock %}
     </div>
   </div>
-  <div class="row my-4">
-    <div class="col d-flex justify-content-center">
+  <div class="row">
+    <div class="col">
+      <p>Here is a sample of the table (first 100 rows)..</p>
+    </div>
+  </div>
+  <div class="row my-2">
+    <div class="col">
       {% block table %}{% endblock %}
     </div>
   </div>
