--- a/flask-app/templates/potential_fraud.html
+++ b/flask-app/templates/potential_fraud.html
@@ -5,519 +5,13 @@
 {% endblock %}
 
 {% block title %}
+| Potential Fraud
+{% endblock %}
+
+{% block heading %}
 <h1>Potential Fraud Data</h1>
 {% endblock %}
 
 {% block table %}
-<table border="1" class="dataframe" id="potential_fraud">
-  <thead>
-      <tr style="text-align: right;">
-          <th></th>
-          <th>provider</th>
-          <th>potential_fraud</th>
-      </tr>
-  </thead>
-  <tbody>
-      <tr>
-          <th>0</th>
-          <td>PRV51001</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>1</th>
-          <td>PRV51003</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>2</th>
-          <td>PRV51004</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>3</th>
-          <td>PRV51005</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>4</th>
-          <td>PRV51007</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>5</th>
-          <td>PRV51008</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>6</th>
-          <td>PRV51011</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>7</th>
-          <td>PRV51012</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>8</th>
-          <td>PRV51013</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>9</th>
-          <td>PRV51014</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>10</th>
-          <td>PRV51015</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>11</th>
-          <td>PRV51016</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>12</th>
-          <td>PRV51017</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>13</th>
-          <td>PRV51021</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>14</th>
-          <td>PRV51023</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>15</th>
-          <td>PRV51024</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>16</th>
-          <td>PRV51025</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>17</th>
-          <td>PRV51026</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>18</th>
-          <td>PRV51027</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>19</th>
-          <td>PRV51029</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>20</th>
-          <td>PRV51030</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>21</th>
-          <td>PRV51031</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>22</th>
-          <td>PRV51032</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>23</th>
-          <td>PRV51035</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>24</th>
-          <td>PRV51036</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>25</th>
-          <td>PRV51037</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>26</th>
-          <td>PRV51038</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>27</th>
-          <td>PRV51040</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>28</th>
-          <td>PRV51041</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>29</th>
-          <td>PRV51042</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>30</th>
-          <td>PRV51043</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>31</th>
-          <td>PRV51044</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>32</th>
-          <td>PRV51045</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>33</th>
-          <td>PRV51046</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>34</th>
-          <td>PRV51047</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>35</th>
-          <td>PRV51048</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>36</th>
-          <td>PRV51049</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>37</th>
-          <td>PRV51052</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>38</th>
-          <td>PRV51053</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>39</th>
-          <td>PRV51054</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>40</th>
-          <td>PRV51055</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>41</th>
-          <td>PRV51056</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>42</th>
-          <td>PRV51057</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>43</th>
-          <td>PRV51058</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>44</th>
-          <td>PRV51059</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>45</th>
-          <td>PRV51060</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>46</th>
-          <td>PRV51061</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>47</th>
-          <td>PRV51062</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>48</th>
-          <td>PRV51063</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>49</th>
-          <td>PRV51064</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>50</th>
-          <td>PRV51065</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>51</th>
-          <td>PRV51066</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>52</th>
-          <td>PRV51067</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>53</th>
-          <td>PRV51068</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>54</th>
-          <td>PRV51070</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>55</th>
-          <td>PRV51071</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>56</th>
-          <td>PRV51072</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>57</th>
-          <td>PRV51074</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>58</th>
-          <td>PRV51075</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>59</th>
-          <td>PRV51076</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>60</th>
-          <td>PRV51077</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>61</th>
-          <td>PRV51078</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>62</th>
-          <td>PRV51081</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>63</th>
-          <td>PRV51082</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>64</th>
-          <td>PRV51083</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>65</th>
-          <td>PRV51084</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>66</th>
-          <td>PRV51086</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>67</th>
-          <td>PRV51089</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>68</th>
-          <td>PRV51090</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>69</th>
-          <td>PRV51091</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>70</th>
-          <td>PRV51093</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>71</th>
-          <td>PRV51096</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>72</th>
-          <td>PRV51097</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>73</th>
-          <td>PRV51098</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>74</th>
-          <td>PRV51100</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>75</th>
-          <td>PRV51101</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>76</th>
-          <td>PRV51102</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>77</th>
-          <td>PRV51103</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>78</th>
-          <td>PRV51104</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>79</th>
-          <td>PRV51105</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>80</th>
-          <td>PRV51108</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>81</th>
-          <td>PRV51109</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>82</th>
-          <td>PRV51110</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>83</th>
-          <td>PRV51111</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>84</th>
-          <td>PRV51112</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>85</th>
-          <td>PRV51113</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>86</th>
-          <td>PRV51114</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>87</th>
-          <td>PRV51115</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>88</th>
-          <td>PRV51117</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>89</th>
-          <td>PRV51118</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>90</th>
-          <td>PRV51119</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>91</th>
-          <td>PRV51120</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>92</th>
-          <td>PRV51121</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>93</th>
-          <td>PRV51122</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>94</th>
-          <td>PRV51123</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>95</th>
-          <td>PRV51125</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>96</th>
-          <td>PRV51126</td>
-          <td>Yes</td>
-      </tr>
-      <tr>
-          <th>97</th>
-          <td>PRV51128</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>98</th>
-          <td>PRV51129</td>
-          <td>No</td>
-      </tr>
-      <tr>
-          <th>99</th>
-          <td>PRV51130</td>
-          <td>No</td>
-      </tr>
-  </tbody>
-</table>
+{% include "potential_fraud_table.html" %}
 {% endblock %}
