--- a/flask-app/templates/wrapper.html
+++ b/flask-app/templates/wrapper.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ETL Project</title>
+  
+    <title>  ETL Project {% block title %}{% endblock %}</title>
+    
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,67 +20,9 @@
   </head>
 
   <body>
-    <!---------------------  NAVIGATION BAR ----------------------->
+    {% include "navbar.html" %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="navbar-brand">
-        <a href="{{ url_for("index") }}"
-          ><button class="btn btn-info">Healthcare Potential Fraud</button></a
-        >
-      </div>
-      <div class="collapse navbar-collapse" id="navbarsupport">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="index.html"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Data
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{{ url_for("inpatient") }}">Inpatient</a>
-              <a class="dropdown-item" href="{{ url_for("outpatient") }}">Outpatient</a>
-              <a class="dropdown-item" href="{{ url_for("potential_fraud") }}">Potential Fraud</a>
-              <a class="dropdown-item" href="{{ url_for("beneficiary") }}">Beneficiary</a>
-            </div>
-          </li>
-          <div class="navbar-brand"></div>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              href="index.html"
-              id="navbarDropdown"
-              role="button"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Analysis
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="by_state.html">Fraud by State</a>
-              <a class="dropdown-item" href="common_codes.html"
-                >Most Common Procedure Codes</a
-              >
-            </div>
-          </li>
-          <div class="navbar-brand"></div>
-          <li class="nav-item active">
-            <a class="nav-link" href="Resources/images/State_Fraud_ERD.png"
-              >ERD <span class="sr-only">(current)</span></a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!---------------------  NAVIGATION BAR ----------------------->
-
-    <div class="container">
+    <div class="container" align="center">
       <div class="row">
         <div class="col">{% block content %}{% endblock %}</div>
       </div>
